# cabal-type-class-default-impl-rebuild

./: README.md  demo.cabal
src/: MyClass.hs  MyInstance.hs
test/: MyTest.hs
