cabal-version:       >=2.0

name:                demo
version:             0.1.0.0
build-type:          Simple

library
    exposed-modules:     MyClass, MyInstance
    build-depends:       base >=4.11
    hs-source-dirs:      src
    default-language:    Haskell2010

test-suite map
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             MyTest.hs
    build-depends:       base >=4.11, demo
